syntax = "proto3";

package protos;

option go_package = "go/service1/grpc-app/protos/auth";

service AuthRPC {
    rpc RegisterUser (RequestRegister) returns (ResponseRegister) {}
    rpc LoginUser (RequestLogin) returns (ResponseLogin) {}
}

// global param
message Info {
    uint32 code = 1;
    string status = 2;
}

// request
message RequestRegister {
    message Data {
        string user_email = 1;
        string user_name = 2;
        string user_password = 3;
    }

    Data data = 1;
}

message RequestLogin {
    message Data {
        string user_email = 1;
        string user_password = 2;
        bool user_remember_me = 3;
    }

    Data data = 1;
}

// response
message ResponseRegister {
    Info info = 1;
    
    message Data {
        string user_name = 1;
        string user_email = 2;
    }

    Data data = 2;
}

message ResponseLogin {
    Info info = 1;

    message Data {
        string user_id = 3;
        string session =  4;
    }

    Data data = 2;
}